# show-bt-connect

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_1.3.0.md  RELEASE_SUMMARY_1.3.0.md  build.rs  resources.rc
.cargo/: config.toml
src/: app_state.rs  audio_device.rs  bluetooth.rs  config.rs  error.rs  keyboard_hook.rs  log.rs  main.rs  single_instance.rs  taskbar_restart.rs  tray.rs  utf16_strings.rs  wide_strings.rs
