[package]
name = "show-bt-connect"
version = "1.2.2"
edition = "2021"
authors = ["jopl@Triffit"]
description = "Restore Win+K: Bluetooth Devices Panel (first Win+K = Bluetooth devices, second = Cast)"
license = "MIT"

[dependencies]
tray-icon = "0.14"
winit = "0.29"
winapi = { version = "0.3", features = [
	"winuser",
	"shellapi",
	"wincon",
	"processthreadsapi",
	"wingdi",
	"libloaderapi",
	"synchapi",
	"errhandlingapi",
	"winerror"
] }
once_cell = "1.19"

[build-dependencies]
embed-resource = "2.4"
ico = "0.3"

[[bin]]
name = "restore-wink-bt"
path = "src/main.rs"

[profile.release]
# (Profile options centralized in .cargo/config.toml for size tuning.)