[package]
name = "show-bt-connect"
version = "1.3.0"
edition = "2021"
authors = ["jopl@Triffit"]
description = "Restore Win+K: Bluetooth Devices Panel (first Win+K = Bluetooth devices, second = Cast)"
license = "MIT"

[dependencies]
tray-icon = "0.14"
winit = "0.29"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_Graphics_Gdi",
] }
windows = { version = "0.59", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Devices_FunctionDiscovery",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Devices_Properties",
] }
once_cell = "1.19"

[build-dependencies]
embed-resource = "2.4"
ico = "0.3"

[[bin]]
name = "restore-wink-bt"
path = "src/main.rs"

[profile.release]
# (Profile options centralized in .cargo/config.toml for size tuning.)

[features]
# Enable runtime debug logging even in release builds.
verbose-log = []